--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ body {
   background-color: transparent;
   color:	white;
   text-align: center;
+  font-family: Cooper, sans-serif;
 }
 
 #about{
@@ -95,4 +96,13 @@ body {
   height: 200px;
   /*background-color: #d966ff;*/
   text-align: center;
+}
+
+
+@media only screen and (max-width: 600px) {
+    .apartment{
+	  width: 90%;
+	  padding-left: 10px;
+	  padding-right: 10px;
+	}
 }
