--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   height: 700px;
-  width: 1200px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   align-items:center;
