--- a/styles.css
+++ b/styles.css
@@ -99,8 +99,9 @@ body {
 }
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 400px) {
     .apartment{
+	  display: inline-block;
 	  width: 90%;
 	  padding-left: 10px;
 	  padding-right: 10px;
