--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@ body {
 }
 
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-device-width: 900px) {
     .apartment{
 	  display: inline-block;
 	  width: 90% !important;
