--- a/styles.css
+++ b/styles.css
@@ -106,4 +106,23 @@ body {
 	  padding-left: 10px;
 	  padding-right: 10px;
 	}
+	
+	.header {
+	  width: 100%;
+	  height: auto;
+	  
+	}
+
+	.headercontainer {
+	  background-color: transparent;
+	  background-size: cover;
+	  background-repeat: no-repeat;
+	  height: 700px;
+	  width: auto;
+	  margin-left: auto;
+	  margin-right: auto;
+	  align-items:center;
+	  display: flex;
+	  justify-content: center;
+	}
 }
