--- a/styles.css
+++ b/styles.css
@@ -100,13 +100,7 @@ body {
 
 
 @media only screen and (max-device-width: 900px) {
-    .apartment{
-	  display: inline-block;
-	  width: 90% !important;
-	  padding-left: 10px;
-	  padding-right: 10px;
-	}
-	
+  
 	.header {
 	  width: 100%;
 	  height: auto;
@@ -117,12 +111,19 @@ body {
 	  background-color: transparent;
 	  background-size: cover;
 	  background-repeat: no-repeat;
-	  height: 700px;
-	  width: auto;
+	  height: auto;
+	  width: 100%;
 	  margin-left: auto;
 	  margin-right: auto;
 	  align-items:center;
 	  display: flex;
 	  justify-content: center;
+	}
+	
+	 .apartment{
+	  display: inline-block;
+	  width: 90% !important;
+	  padding-left: 10px;
+	  padding-right: 10px;
 	}
 }
