--- a/styles.css
+++ b/styles.css
@@ -58,8 +58,6 @@ body {
 .apartment{
   display: inline-block;
   width: 50%;
-  padding-left: 25px;
-  padding-right: 25px;
 }
 
 
@@ -106,6 +104,10 @@ body {
 	  height: auto;
 	  
 	}
+	.header h1{
+		word-wrap: break-word;
+		font-size:1.1em;
+	}
 
 	.headercontainer {
 	  background-color: transparent;
@@ -122,8 +124,8 @@ body {
 	
 	 .apartment{
 	  display: inline-block;
-	  width: 90% !important;
-	  padding-left: 10px;
-	  padding-right: 10px;
+	  width: 90%;
+	  padding-left: 5%;
+	  padding-right: 5%;
 	}
 }
